--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.vibrator">
     <uses-permission android:name="android.permission.VIBRATE"/>
    <application
-        android:label="vibrator"
+        android:label="Vibrator"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
